# CI-CD-Platform

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci-pipeline.yml  ci.yml  co2-tracker.yml  test.yml
app/: main.py
ci_cd_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/: index.html  package.json
dashboard/src/: App.css  App.tsx  index.css
nginx/: nginx.conf
scripts/: deploy.sh  rollback.sh
tests/: test_api.py  test_rollback.py
